--- a/project/client/package.json
+++ b/project/client/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -23,7 +24,8 @@
     "tailwindcss": "^3.3.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve build -s -n -L -p $PORT",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
